style.css
/*
  Josh's Custom CSS Reset
  https://www.joshwcomeau.com/css/custom-css-reset/
*/
@font-face {
    font-family: 'Norse';
    src: url('fonts/Norse-Bold.woff2') format('woff2'),
        url('fonts/Norse-Bold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

*, *::before, *::after {
  box-sizing: border-box;
}

*:not(dialog) {
  margin: 0;
}

@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

input, button, textarea, select {
  font: inherit;
}

p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}

#root, #__next {
  isolation: isolate;
}



:root{
    font-size: 16px;;
}

body{
    display: flex;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

a{
    color: blue;
}

h2{
    padding-top: 5px;
    padding-left: 5%;
    font-size:x-large;
}

.image{
    min-height: 100vh;
    width: 33.33vw;
    background-image: url(images/halie-west-25xggax4bSA-unsplash.jpg);
    background-size:cover;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.form{
    background-color:rgb(239, 235, 235);
    width: 66.66vw;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    min-width: 700px;
}

.text{
    flex-grow: 1;
    box-sizing: border-box;
    padding: 5% 5%;
    font-weight: 500;
    font-size: 1.4rem;
    padding-right: 10%;
    line-height: 1.4em;
    min-height: 200px;
    min-width: 800px;

}

.fields{
    display: flex;
    flex-direction: column;
    background-color: white;
    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
    flex-grow: 1;
    min-height: 260px;
    min-width: 995px;
    padding-top: 5px;
}

.title{
    font-weight: 800;
    padding-left: 5%;
    font-size: 1.5rem;
}

.field-container{
    display: flex;
}

form{
    display: flex;
    flex-wrap: wrap;
    box-sizing: border-box;
    padding-left: 5%;
    padding-top: 15px;
    flex-shrink: 1;
    font-size: 0.9rem;
}

.form-item{
    min-width: 350px;
    padding-bottom: 10px;
}

label{
    display: block;
}

.btn{
    flex-shrink: 1;
    height: 33vh;
    position: relative;
}

input{
    min-width: 250px;
}

input:focus{
    border-color: blue;
}

input:user-invalid{
    border-color: red;
}

button{
    padding: 5px 40px;
    background-color: #596D48;
    color: white;
    font-size: medium;
    font-weight: bold;
    border-radius: 5px;
    position: absolute;
    top: 50px;
    left: 5%;
    border: none;
}

.btn p{
    position: absolute;
    top: 120px;
    left: 5%;
    font-weight: 600;
    font-size: medium;
}

button:active{
    transform: translateY(2px);
}

.image{
    
    display: flex;
}

.image div{
    background-color: rgba(0, 0, 0, 0.5);
    width: 100%;
    height: 100px;
    
}
.logo{
    font-family: 'Norse';
    color: white;
    font-size: 5rem;
    font-weight: 800;
    background-color: rgba(0, 0, 0, 0.1);
    position: relative;
    bottom: 200px;
    display:flex;
    justify-content: center;
}

img{
    height: 100px;
    width:auto;
    display: inline;
}

.logo span{
    padding: 5px;
    display: inline-block;
    position: relative;
    bottom: 20px;
}

input[type="password"]:user-invalid{
border-color: red;
}

